Fixed title margins on mobile

--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -45,6 +45,7 @@
     }
     .title {
         text-align: center;
+        margin: 0;
     }
     .picofme {
         margin-right: 0;
